force-app/main/default/objects/Application_Error_Logs__c/Application_Error_Logs__c.object-meta.xml
<CustomObject>
    <label>Application Error Logs</label>
    <nameField>
        <displayFormat>AE-{0000000}</displayFormat>
        <label>Application Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>