force-app/main/default/objects/Application_Error_Logs__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>apex class name will be save here</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>