force-app/main/default/objects/Application_Error_Logs__c/fields/Error_Json_if_any__c.field-meta.xml
<CustomField>
    <fullName>Error_Json_if_any__c</fullName>
    <label>Error Json(request info- if any)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>