force-app/main/default/objects/Application_Error_Logs__c/fields/Exception_Received__c.field-meta.xml
<CustomField>
    <fullName>Exception_Received__c</fullName>
    <label>Exception Received( caught Exception)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>